Fix alignment

--- a/style/style-lines.less
+++ b/style/style-lines.less
@@ -188,9 +188,13 @@ select, button {
 		.title {
 			margin-left: 10px;
 		}
-		.logo-wrapper {
-			cursor: pointer;
-			margin-left: 5px;
+		.other-lines {
+			display: inline-block;
+
+			.logo-wrapper {
+				cursor: pointer;
+				margin-left: 5px;
+			}
 		}
 	}
 }
